--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="refresh_bt_devices">Refresh</string>
     <string name="press_to_talk">Press_To_Talk</string>
     <string name="connect_to_bluetooth">Connect to Bluetooth</string>
+    <string name="your_diary_entry_goes_here">Your diary entry goes here!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
